--- a/feladat.html
+++ b/feladat.html
@@ -233,3 +233,44 @@ Hungary_QR kihagyva (100%), <br />
 Hungary_DebreceniKereszt kihagyva (100%), <br />
 Hungary_60Flat kihagyva (100%), <br />
 UnitedKingdom_TheLondonDonutCat, <b>updated</b>, 417, <a href="https://www.munzee.com/map/gcpvr83c6/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheLondonDonutCat.json" target="_blank">json</a><br />
+UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
+UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
+UnitedKingdom_LondonUnderground, not updated, 0.0<br />
+UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
+UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
+UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
+UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
+UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
+UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
+UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
+UnitedKingdom_ShadesGarden kihagyva (100%), <br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_SailingBoat kihagyva (100%), <br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, -42.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
+UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
+UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
+Canada_OttawaCancerRibbon kihagyva (100%), <br />
+Canada_OttawaGoldfish kihagyva (100%), <br />
+Canada_BananaBread kihagyva (100%), <br />
+Canada_Elephriends kihagyva (100%), <br />
+Canada_LizzysUnicorn kihagyva (100%), <br />
+Canada_JeffsFarm kihagyva (100%), <br />
+UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
+Germany_JohnTheFab41 kihagyva (100%), <br />
+Germany_RingoTheFab4, <b>updated</b>, 372, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
