--- a/feladat.html
+++ b/feladat.html
@@ -274,3 +274,11 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, <b>updated</b>, 372, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
+Germany_GeorgeTheFab42, not updated, 0.7899999999999991<br />
+Germany_PaulTheFab43, not updated, 1.0<br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla kihagyva (100%), <br />
+Hungary_SZTE, not updated, -16.53<br />
+Hungary_MarioInVac, <b>updated</b>, 210, <a href="https://www.munzee.com/map/u2mxg2dwj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MarioInVac.json" target="_blank">json</a><br />
