--- a/feladat.html
+++ b/feladat.html
@@ -337,3 +337,5 @@ Canada_LizzysGoldfish kihagyva (100%), <br />
 Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
 Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
 UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 63, <a href="https://www.munzee.com/map/gcngq3xm7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInAndover.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
+USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
