--- a/feladat.html
+++ b/feladat.html
@@ -340,3 +340,5 @@ UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 63, <a href="https:/
 Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
 USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
 USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 66, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 59, <a href="https://www.munzee.com/map/gcnhxpp6s/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInKingswood.json" target="_blank">json</a><br />
