--- a/feladat.html
+++ b/feladat.html
@@ -342,3 +342,5 @@ USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www
 USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 66, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
 Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
 UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 59, <a href="https://www.munzee.com/map/gcnhxpp6s/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInKingswood.json" target="_blank">json</a><br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, <b>updated</b>, 60, <a href="https://www.munzee.com/map/u0xspjjng/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_StroopwafelInvasionInMeitingen.json" target="_blank">json</a><br />
