--- a/feladat.html
+++ b/feladat.html
@@ -344,3 +344,4 @@ Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
 UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 59, <a href="https://www.munzee.com/map/gcnhxpp6s/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInKingswood.json" target="_blank">json</a><br />
 Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
 Germany_StroopwafelInvasionInMeitingen, <b>updated</b>, 60, <a href="https://www.munzee.com/map/u0xspjjng/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_StroopwafelInvasionInMeitingen.json" target="_blank">json</a><br />
+Canada_StroopwafelInvasionInNewWestminster, <b>updated</b>, 72, <a href="https://www.munzee.com/map/c28xfy4xj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_StroopwafelInvasionInNewWestminster.json" target="_blank">json</a><br />
