--- a/feladat.html
+++ b/feladat.html
@@ -345,3 +345,4 @@ UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 59, <a href="https
 Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
 Germany_StroopwafelInvasionInMeitingen, <b>updated</b>, 60, <a href="https://www.munzee.com/map/u0xspjjng/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_StroopwafelInvasionInMeitingen.json" target="_blank">json</a><br />
 Canada_StroopwafelInvasionInNewWestminster, <b>updated</b>, 72, <a href="https://www.munzee.com/map/c28xfy4xj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_StroopwafelInvasionInNewWestminster.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInNorlane, <b>updated</b>, 70, <a href="https://www.munzee.com/map/r1nxks295/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInNorlane.json" target="_blank">json</a><br />
