--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.02.13 11:13:47<br />
+<b>start</b> - 2023.02.13 12:49:55<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -36,7 +36,7 @@ USA_CommerceBarnyard kihagyva (100%), <br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
-Australia_YoureAStar, <b>updated</b>, 516, <a href="https://www.munzee.com/map/qd69bvq0m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_YoureAStar.json" target="_blank">json</a><br />
+Australia_YoureAStar, not updated, 0.0<br />
 USA_StAugustinePirateShip, not updated, 0.0<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, <b>updated</b>, 430, <a href="https://www.munzee.com/map/9zvwrt9px/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LighteksMinnesotaWild.json" target="_blank">json</a><br />
+USA_LighteksMinnesotaWild, not updated, 0.0<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -232,7 +232,7 @@ Hungary_Honey kihagyva (100%), <br />
 Hungary_QR kihagyva (100%), <br />
 Hungary_DebreceniKereszt kihagyva (100%), <br />
 Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, <b>updated</b>, 417, <a href="https://www.munzee.com/map/gcpvr83c6/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheLondonDonutCat.json" target="_blank">json</a><br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
 UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
 UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
 UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
@@ -273,7 +273,7 @@ Canada_LizzysUnicorn kihagyva (100%), <br />
 Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
-Germany_RingoTheFab4, <b>updated</b>, 372, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
+Germany_RingoTheFab4, not updated, 0.0<br />
 Germany_GeorgeTheFab42, not updated, 0.7899999999999991<br />
 Germany_PaulTheFab43, not updated, 1.0<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
@@ -281,7 +281,7 @@ Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla kihagyva (100%), <br />
 Hungary_SZTE, not updated, -16.53<br />
-Hungary_MarioInVac, <b>updated</b>, 210, <a href="https://www.munzee.com/map/u2mxg2dwj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MarioInVac.json" target="_blank">json</a><br />
+Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
 Hungary_ShieldKecskemet, not updated, 0.0<br />
 Hungary_Mini kihagyva (100%), <br />
@@ -336,13 +336,14 @@ Canada_SecretLove kihagyva (100%), <br />
 Canada_LizzysGoldfish kihagyva (100%), <br />
 Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
 Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 63, <a href="https://www.munzee.com/map/gcngq3xm7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInAndover.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
 Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
-USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
-USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 66, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
+USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
 Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
-UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 59, <a href="https://www.munzee.com/map/gcnhxpp6s/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInKingswood.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
 Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
-Germany_StroopwafelInvasionInMeitingen, <b>updated</b>, 60, <a href="https://www.munzee.com/map/u0xspjjng/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_StroopwafelInvasionInMeitingen.json" target="_blank">json</a><br />
-Canada_StroopwafelInvasionInNewWestminster, <b>updated</b>, 72, <a href="https://www.munzee.com/map/c28xfy4xj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_StroopwafelInvasionInNewWestminster.json" target="_blank">json</a><br />
-Australia_StroopwafelInvasionInNorlane, <b>updated</b>, 70, <a href="https://www.munzee.com/map/r1nxks295/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInNorlane.json" target="_blank">json</a><br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInOspel, <b>updated</b>, 77, <a href="https://www.munzee.com/map/u1h5gdgny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_StroopwafelInvasionInOspel.json" target="_blank">json</a> <b>100%</b><br />
