--- a/feladat.html
+++ b/feladat.html
@@ -348,3 +348,4 @@ Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
 Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
 Netherlands_StroopwafelInvasionInOspel, <b>updated</b>, 77, <a href="https://www.munzee.com/map/u1h5gdgny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_StroopwafelInvasionInOspel.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_StroopwafelInvasionInThringstone, <b>updated</b>, 64, <a href="https://www.munzee.com/map/gcrh0updg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInThringstone.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInWonthaggi, <b>updated</b>, 74, <a href="https://www.munzee.com/map/r1ps2ge1w/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInWonthaggi.json" target="_blank">json</a><br />
