--- a/feladat.html
+++ b/feladat.html
@@ -749,3 +749,11 @@ UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare, not updated, 0.0<br />
 Portugal_Saab9xInMadeira, <b>updated</b>, 110, <a href="https://www.munzee.com/map/etu1c7ttr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_Saab9xInMadeira.json" target="_blank">json</a><br />
+Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
+USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
+USA_ZeecretBriefcaseInIndpendence, not updated, 0.0<br />
+UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
+USA_SpyTrain kihagyva (100%), <br />
+USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
+USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
+Canada_Feb2023HeartGarden, <b>updated</b>, 277, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
