--- a/feladat.html
+++ b/feladat.html
@@ -758,3 +758,4 @@ USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, <b>updated</b>, 277, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
 USA_SpyGlass, <b>updated</b>, 135, <a href="https://www.munzee.com/map/dnrmhsuv8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyGlass.json" target="_blank">json</a><br />
+USA_TiedUpInKnotzInRoundRock, <b>updated</b>, 147, <a href="https://www.munzee.com/map/9v6tbuxnn/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TiedUpInKnotzInRoundRock.json" target="_blank">json</a><br />
