--- a/feladat.html
+++ b/feladat.html
@@ -759,3 +759,43 @@ USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, <b>updated</b>, 277, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
 USA_SpyGlass, <b>updated</b>, 135, <a href="https://www.munzee.com/map/dnrmhsuv8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyGlass.json" target="_blank">json</a><br />
 USA_TiedUpInKnotzInRoundRock, <b>updated</b>, 147, <a href="https://www.munzee.com/map/9v6tbuxnn/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TiedUpInKnotzInRoundRock.json" target="_blank">json</a><br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+Finland_city_Hyvinkaa, <b>updated</b>, <a href="https://www.munzee.com/map/udc8udkum/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_city_Hyvinkaa.json" target="_blank">json</a><br />
+UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
+USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
+----felhasználók<br />
+tartu61_all, <b>updated</b>, <a href="https://www.munzee.com/map/udc8udkum/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tartu61_all.json" target="_blank">json</a><br />
+tartu61_empty, <b>updated</b>, <a href="https://www.munzee.com/map/udc8vwrpv/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tartu61_empty.json" target="_blank">json</a><br />
+----témák<br />
+Germany_topic_TheFABInTubingen, <b>updated</b>, <a href="https://www.munzee.com/map/u0w7vzm9n/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_TheFABInTubingen.json" target="_blank">json</a><br />
+World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Canada_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/c28xfy4xj/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Germany_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u33e0rucx/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Netherlands_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u15rfnm03/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+UnitedKingdom_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gcnhxpp6s/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+USA_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/9vgkbm7fn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.02.13 13:31:37<br />
+összesen 2501<br />
