--- a/feladat.html
+++ b/feladat.html
@@ -748,3 +748,9 @@ Australia_TourDownUnder, not updated, 0.0<br />
 UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare, <b>updated</b>, 121, <a href="https://www.munzee.com/map/dpz8e29qd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_WarblersSquare.json" target="_blank">json</a> <b>100%</b><br />
+Portugal_Saab9xInMadeira, not updated, 0.0<br />
+Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
+USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
+USA_ZeecretBriefcaseInIndpendence, not updated, 0.0<br />
+UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
+USA_SpyTrain, <b>updated</b>, 108, <a href="https://www.munzee.com/map/dpehs3s8e/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyTrain.json" target="_blank">json</a> <b>100%</b><br />
