--- a/feladat.html
+++ b/feladat.html
@@ -754,3 +754,6 @@ USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 0.0<br />
 UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
 USA_SpyTrain, <b>updated</b>, 108, <a href="https://www.munzee.com/map/dpehs3s8e/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyTrain.json" target="_blank">json</a> <b>100%</b><br />
+USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
+USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
+Canada_Feb2023HeartGarden, <b>updated</b>, 290, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
