--- a/feladat.html
+++ b/feladat.html
@@ -757,3 +757,27 @@ USA_SpyTrain, <b>updated</b>, 108, <a href="https://www.munzee.com/map/dpehs3s8e
 USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, <b>updated</b>, 290, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
+USA_SpyGlass, not updated, 0.0<br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.0<br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+USA_Cowtown, <b>updated</b>, 429, <a href="https://www.munzee.com/map/9vff88tju/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cowtown.json" target="_blank">json</a> <b>100%</b><br />
