--- a/feladat.html
+++ b/feladat.html
@@ -783,3 +783,4 @@ USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
 USA_Cowtown, <b>updated</b>, 429, <a href="https://www.munzee.com/map/9vff88tju/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cowtown.json" target="_blank">json</a> <b>100%</b><br />
 USA_VelmaCrossbow, <b>updated</b>, 1381, <a href="https://www.munzee.com/map/9vff0n39v/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_VelmaCrossbow.json" target="_blank">json</a><br />
 USA_Shaggy, <b>updated</b>, 645, <a href="https://www.munzee.com/map/9vfdpzmgu/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Shaggy.json" target="_blank">json</a><br />
+USA_MysteryMachine, <b>updated</b>, 747, <a href="https://www.munzee.com/map/9vfdpwx10/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MysteryMachine.json" target="_blank">json</a><br />
