--- a/feladat.html
+++ b/feladat.html
@@ -785,3 +785,4 @@ USA_VelmaCrossbow, <b>updated</b>, 1381, <a href="https://www.munzee.com/map/9vf
 USA_Shaggy, <b>updated</b>, 645, <a href="https://www.munzee.com/map/9vfdpzmgu/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Shaggy.json" target="_blank">json</a><br />
 USA_MysteryMachine, <b>updated</b>, 747, <a href="https://www.munzee.com/map/9vfdpwx10/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MysteryMachine.json" target="_blank">json</a><br />
 USA_FortWorthFighterJet, <b>updated</b>, 396, <a href="https://www.munzee.com/map/9vfdr7e5w/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorthFighterJet.json" target="_blank">json</a><br />
+USA_TCUHornedFrogs, <b>updated</b>, 988, <a href="https://www.munzee.com/map/9vff0931z/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TCUHornedFrogs.json" target="_blank">json</a><br />
