--- a/feladat.html
+++ b/feladat.html
@@ -786,3 +786,4 @@ USA_Shaggy, <b>updated</b>, 645, <a href="https://www.munzee.com/map/9vfdpzmgu/1
 USA_MysteryMachine, <b>updated</b>, 747, <a href="https://www.munzee.com/map/9vfdpwx10/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MysteryMachine.json" target="_blank">json</a><br />
 USA_FortWorthFighterJet, <b>updated</b>, 396, <a href="https://www.munzee.com/map/9vfdr7e5w/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorthFighterJet.json" target="_blank">json</a><br />
 USA_TCUHornedFrogs, <b>updated</b>, 988, <a href="https://www.munzee.com/map/9vff0931z/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TCUHornedFrogs.json" target="_blank">json</a><br />
+USA_GeowoodstockXVIITexas, <b>updated</b>, 834, <a href="https://www.munzee.com/map/9vfcbxwtn/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GeowoodstockXVIITexas.json" target="_blank">json</a><br />
