--- a/feladat.html
+++ b/feladat.html
@@ -794,3 +794,4 @@ USA_FortWorthSucculents, <b>updated</b>, 614, <a href="https://www.munzee.com/ma
 USA_RobVsMatt, <b>updated</b>, 3089, <a href="https://www.munzee.com/map/9vfdmckq6/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RobVsMatt.json" target="_blank">json</a><br />
 USA_BrightColoredHorse, <b>updated</b>, 421, <a href="https://www.munzee.com/map/9vfdprxcn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BrightColoredHorse.json" target="_blank">json</a><br />
 USA_BrightColoredHorseFlats, <b>updated</b>, 54, <a href="https://www.munzee.com/map/9vfdprxcn/16.1009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BrightColoredHorseFlats.json" target="_blank">json</a><br />
+USA_RuhRohRAGGY, <b>updated</b>, 276, <a href="https://www.munzee.com/map/9vfdpmzmh/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RuhRohRAGGY.json" target="_blank">json</a><br />
