--- a/feladat.html
+++ b/feladat.html
@@ -796,3 +796,4 @@ USA_BrightColoredHorse, <b>updated</b>, 421, <a href="https://www.munzee.com/map
 USA_BrightColoredHorseFlats, <b>updated</b>, 54, <a href="https://www.munzee.com/map/9vfdprxcn/16.1009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BrightColoredHorseFlats.json" target="_blank">json</a><br />
 USA_RuhRohRAGGY, <b>updated</b>, 276, <a href="https://www.munzee.com/map/9vfdpmzmh/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RuhRohRAGGY.json" target="_blank">json</a><br />
 USA_PrizeWheel, <b>updated</b>, 435, <a href="https://www.munzee.com/map/9vfdq473e/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrizeWheel.json" target="_blank">json</a> <b>100%</b><br />
+USA_EvoHedgehog, <b>updated</b>, 249, <a href="https://www.munzee.com/map/9vffcpcfg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EvoHedgehog.json" target="_blank">json</a> <b>100%</b><br />
