--- a/feladat.html
+++ b/feladat.html
@@ -797,3 +797,4 @@ USA_BrightColoredHorseFlats, <b>updated</b>, 54, <a href="https://www.munzee.com
 USA_RuhRohRAGGY, <b>updated</b>, 276, <a href="https://www.munzee.com/map/9vfdpmzmh/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RuhRohRAGGY.json" target="_blank">json</a><br />
 USA_PrizeWheel, <b>updated</b>, 435, <a href="https://www.munzee.com/map/9vfdq473e/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrizeWheel.json" target="_blank">json</a> <b>100%</b><br />
 USA_EvoHedgehog, <b>updated</b>, 249, <a href="https://www.munzee.com/map/9vffcpcfg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EvoHedgehog.json" target="_blank">json</a> <b>100%</b><br />
+USA_SeahorseByTheSeaShore, <b>updated</b>, 161, <a href="https://www.munzee.com/map/dj3shdv4f/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SeahorseByTheSeaShore.json" target="_blank">json</a> <b>100%</b><br />
