--- a/feladat.html
+++ b/feladat.html
@@ -801,3 +801,16 @@ USA_SeahorseByTheSeaShore, <b>updated</b>, 161, <a href="https://www.munzee.com/
 USA_LakeForestMixture, <b>updated</b>, 493, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
 USA_GreenvillesAmethystRoad, <b>updated</b>, 71, <a href="https://www.munzee.com/map/dp5u4wnun/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvillesAmethystRoad.json" target="_blank">json</a> <b>100%</b><br />
 USA_SaintMarysHeart, <b>updated</b>, 72, <a href="https://www.munzee.com/map/dp5u68q9p/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SaintMarysHeart.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
+USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
+USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
+----felhasználók<br />
+Brandikorte_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vff269xn/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_all.json" target="_blank">json</a><br />
+Brandikorte_completed, <b>updated</b>, <a href="https://www.munzee.com/map/cbjb28d2h/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_completed.json" target="_blank">json</a><br />
+tlmeadowlark_all, <b>updated</b>, <a href="https://www.munzee.com/map/djf8kbee5/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_all.json" target="_blank">json</a><br />
+tlmeadowlark_completed, <b>updated</b>, <a href="https://www.munzee.com/map/dnhdug6cs/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_completed.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.13 22:45:32<br />
+összesen 16040<br />
