--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.13 18:18:11<br />
+<b>start</b> - 2023.02.14 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -34.99000000000001<br />
+Hungary_VotiveChurch, not updated, -36.93000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, <b>updated</b>, 453, <a href="https://www.munzee.com/map/9zvwrt9px/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LighteksMinnesotaWild.json" target="_blank">json</a><br />
+USA_LighteksMinnesotaWild, not updated, 0.30999999999999517<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -684,7 +684,7 @@ Australia_BeeLucky kihagyva (100%), <br />
 Australia_HereBeeZodiacs kihagyva (100%), <br />
 Australia_FlatterBee kihagyva (100%), <br />
 Australia_Honeycomb kihagyva (100%), <br />
-Australia_TwoBeeOrKnot, not updated, 0.6329113924050613<br />
+Australia_TwoBeeOrKnot, not updated, 0.0<br />
 Australia_HoneyDipper kihagyva (100%), <br />
 Australia_LaidleyBees kihagyva (100%), <br />
 Australia_RUMbleBee kihagyva (100%), <br />
@@ -747,18 +747,18 @@ Portugal_ShipCanical kihagyva (100%), <br />
 Australia_TourDownUnder, not updated, 0.0<br />
 UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
-Canada_WarblersSquare, <b>updated</b>, 121, <a href="https://www.munzee.com/map/dpz8e29qd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_WarblersSquare.json" target="_blank">json</a> <b>100%</b><br />
+Canada_WarblersSquare kihagyva (100%), <br />
 Portugal_Saab9xInMadeira, not updated, 0.0<br />
 Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
 USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 0.0<br />
 UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
-USA_SpyTrain, <b>updated</b>, 108, <a href="https://www.munzee.com/map/dpehs3s8e/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyTrain.json" target="_blank">json</a> <b>100%</b><br />
+USA_SpyTrain kihagyva (100%), <br />
 USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, <b>updated</b>, 290, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
+Canada_Feb2023HeartGarden, not updated, 0.0<br />
 USA_SpyGlass, not updated, 0.0<br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.0<br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.4000000000000057<br />
 USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
 USA_EllisCreekOwl kihagyva (100%), <br />
 USA_EllisCreekOwlFlats, not updated, 0.0<br />
@@ -780,37 +780,22 @@ USA_BundtiniTrail kihagyva (100%), <br />
 USA_JewelOfAHeart kihagyva (100%), <br />
 USA_LetsTalkAbundtLove kihagyva (100%), <br />
 USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown, <b>updated</b>, 429, <a href="https://www.munzee.com/map/9vff88tju/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cowtown.json" target="_blank">json</a> <b>100%</b><br />
-USA_VelmaCrossbow, <b>updated</b>, 1381, <a href="https://www.munzee.com/map/9vff0n39v/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_VelmaCrossbow.json" target="_blank">json</a><br />
-USA_Shaggy, <b>updated</b>, 645, <a href="https://www.munzee.com/map/9vfdpzmgu/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Shaggy.json" target="_blank">json</a><br />
-USA_MysteryMachine, <b>updated</b>, 747, <a href="https://www.munzee.com/map/9vfdpwx10/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MysteryMachine.json" target="_blank">json</a><br />
-USA_FortWorthFighterJet, <b>updated</b>, 396, <a href="https://www.munzee.com/map/9vfdr7e5w/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorthFighterJet.json" target="_blank">json</a><br />
-USA_TCUHornedFrogs, <b>updated</b>, 988, <a href="https://www.munzee.com/map/9vff0931z/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TCUHornedFrogs.json" target="_blank">json</a><br />
-USA_GeowoodstockXVIITexas, <b>updated</b>, 834, <a href="https://www.munzee.com/map/9vfcbxwtn/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GeowoodstockXVIITexas.json" target="_blank">json</a><br />
-USA_FortWorthRootinTootinMunzeeCow, <b>updated</b>, 284, <a href="https://www.munzee.com/map/9vff34f4q/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorthRootinTootinMunzeeCow.json" target="_blank">json</a><br />
-USA_TigerKing, <b>updated</b>, 380, <a href="https://www.munzee.com/map/9vfcfhj93/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TigerKing.json" target="_blank">json</a><br />
-USA_TexasGeowoodstock2019, <b>updated</b>, 1286, <a href="https://www.munzee.com/map/9vfdmb7wb/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TexasGeowoodstock2019.json" target="_blank">json</a> <b>100%</b><br />
-USA_FortWorthSucculents, <b>updated</b>, 614, <a href="https://www.munzee.com/map/9vff272ph/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorthSucculents.json" target="_blank">json</a> <b>100%</b><br />
-USA_RobVsMatt, <b>updated</b>, 3089, <a href="https://www.munzee.com/map/9vfdmckq6/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RobVsMatt.json" target="_blank">json</a><br />
-USA_BrightColoredHorse, <b>updated</b>, 421, <a href="https://www.munzee.com/map/9vfdprxcn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BrightColoredHorse.json" target="_blank">json</a><br />
-USA_BrightColoredHorseFlats, <b>updated</b>, 54, <a href="https://www.munzee.com/map/9vfdprxcn/16.1009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BrightColoredHorseFlats.json" target="_blank">json</a><br />
-USA_RuhRohRAGGY, <b>updated</b>, 276, <a href="https://www.munzee.com/map/9vfdpmzmh/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RuhRohRAGGY.json" target="_blank">json</a><br />
-USA_PrizeWheel, <b>updated</b>, 435, <a href="https://www.munzee.com/map/9vfdq473e/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrizeWheel.json" target="_blank">json</a> <b>100%</b><br />
-USA_EvoHedgehog, <b>updated</b>, 249, <a href="https://www.munzee.com/map/9vffcpcfg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EvoHedgehog.json" target="_blank">json</a> <b>100%</b><br />
-USA_SeahorseByTheSeaShore, <b>updated</b>, 161, <a href="https://www.munzee.com/map/dj3shdv4f/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SeahorseByTheSeaShore.json" target="_blank">json</a> <b>100%</b><br />
-USA_LakeForestMixture, <b>updated</b>, 493, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
-USA_GreenvillesAmethystRoad, <b>updated</b>, 71, <a href="https://www.munzee.com/map/dp5u4wnun/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvillesAmethystRoad.json" target="_blank">json</a> <b>100%</b><br />
-USA_SaintMarysHeart, <b>updated</b>, 72, <a href="https://www.munzee.com/map/dp5u68q9p/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SaintMarysHeart.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
-USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
-USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
-----felhasználók<br />
-Brandikorte_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vff269xn/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_all.json" target="_blank">json</a><br />
-Brandikorte_completed, <b>updated</b>, <a href="https://www.munzee.com/map/cbjb28d2h/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_completed.json" target="_blank">json</a><br />
-tlmeadowlark_all, <b>updated</b>, <a href="https://www.munzee.com/map/djf8kbee5/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_all.json" target="_blank">json</a><br />
-tlmeadowlark_completed, <b>updated</b>, <a href="https://www.munzee.com/map/dnhdug6cs/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_completed.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.02.13 22:45:32<br />
-összesen 16040<br />
+USA_Cowtown kihagyva (100%), <br />
+USA_VelmaCrossbow, not updated, 0.0<br />
+USA_Shaggy, not updated, 0.0<br />
+USA_MysteryMachine, not updated, 0.0<br />
+USA_FortWorthFighterJet, not updated, 0.0<br />
+USA_TCUHornedFrogs, not updated, 0.0<br />
+USA_GeowoodstockXVIITexas, not updated, 0.0<br />
+USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
+USA_TigerKing, not updated, 0.0<br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, <b>updated</b>, 529, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
