--- a/feladat.html
+++ b/feladat.html
@@ -799,3 +799,11 @@ USA_PrizeWheel kihagyva (100%), <br />
 USA_EvoHedgehog kihagyva (100%), <br />
 USA_SeahorseByTheSeaShore kihagyva (100%), <br />
 USA_LakeForestMixture, <b>updated</b>, 529, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.02.14 01:46:23<br />
+összesen 2175<br />
