--- a/feladat.html
+++ b/feladat.html
@@ -758,3 +758,44 @@ USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, not updated, 0.0<br />
 USA_SpyGlass, <b>updated</b>, 121, <a href="https://www.munzee.com/map/dnrmhsuv8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyGlass.json" target="_blank">json</a><br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.4000000000000057<br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+USA_Cowtown kihagyva (100%), <br />
+USA_VelmaCrossbow, not updated, 0.0<br />
+USA_Shaggy, not updated, 0.0<br />
+USA_MysteryMachine, not updated, 0.0<br />
+USA_FortWorthFighterJet, not updated, 0.0<br />
+USA_TCUHornedFrogs, not updated, 0.0<br />
+USA_GeowoodstockXVIITexas, not updated, 0.0<br />
+USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
+USA_TigerKing, not updated, 0.0<br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, <b>updated</b>, 550, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
