--- a/feladat.html
+++ b/feladat.html
@@ -799,3 +799,17 @@ USA_PrizeWheel kihagyva (100%), <br />
 USA_EvoHedgehog kihagyva (100%), <br />
 USA_SeahorseByTheSeaShore kihagyva (100%), <br />
 USA_LakeForestMixture, <b>updated</b>, 550, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+----városok update<br />
+USA_city_Weatherford, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6qxdkf/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Weatherford.json" target="_blank">json</a><br />
+----felhasználók update<br />
+knotmunz_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6q7snp/15.0003" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/knotmunz_all.json" target="_blank">json</a><br />
+knotmunz_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6q88ed/15.0013" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/knotmunz_completed.json" target="_blank">json</a><br />
+knotmunz_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9v6tbuxnn/15.0013" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/knotmunz_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.02.14 08:02:15<br />
+összesen 2494<br />
