--- a/feladat.html
+++ b/feladat.html
@@ -180,3 +180,29 @@ Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.6711409395973149<br />
 Canada_GatineauEvo, <b>updated</b>, 153, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
+Germany_ColorsBonn kihagyva (100%), <br />
+Germany_BTHVN2020 kihagyva (100%), <br />
+Canada_GatineauScarletTulip kihagyva (100%), <br />
+Canada_RumballMachine kihagyva (100%), <br />
+Canada_OttawaFireworks kihagyva (100%), <br />
+Canada_HospitalLove kihagyva (100%), <br />
+Hungary_Q94 kihagyva (100%), <br />
+Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
+Hungary_RWG kihagyva (100%), <br />
+Hungary_Grail kihagyva (100%), <br />
+Hungary_DVTKInMiskolc, not updated, 0.0<br />
+Hungary_Beagle kihagyva (100%), <br />
+Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
+Hungary_KodalysViolin kihagyva (100%), <br />
+Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
+Hungary_64color kihagyva (100%), <br />
+Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldEger, not updated, 0.0<br />
+Hungary_MunzeeLogo kihagyva (100%), <br />
+Hungary_GreatChurch kihagyva (100%), <br />
+Canada_SpringInOttawa kihagyva (100%), <br />
+Canada_OttawaNewYears kihagyva (100%), <br />
+Canada_SummerInOttawa kihagyva (100%), <br />
+USA_TheAppleValleyApple kihagyva (100%), <br />
+USA_LighteksMinnesotaWild, <b>updated</b>, 423, <a href="https://www.munzee.com/map/9zvwrt9px/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LighteksMinnesotaWild.json" target="_blank">json</a><br />
