--- a/feladat.html
+++ b/feladat.html
@@ -799,3 +799,6 @@ USA_PrizeWheel kihagyva (100%), <br />
 USA_EvoHedgehog kihagyva (100%), <br />
 USA_SeahorseByTheSeaShore kihagyva (100%), <br />
 USA_LakeForestMixture, <b>updated</b>, 661, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, <b>updated</b>, 145, <a href="https://www.munzee.com/map/dp5u4pntu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleOhioSpiritTrophy.json" target="_blank">json</a><br />
