--- a/feladat.html
+++ b/feladat.html
@@ -802,3 +802,4 @@ USA_LakeForestMixture, <b>updated</b>, 661, <a href="https://www.munzee.com/map/
 USA_GreenvillesAmethystRoad kihagyva (100%), <br />
 USA_SaintMarysHeart kihagyva (100%), <br />
 USA_GreenvilleOhioSpiritTrophy, <b>updated</b>, 145, <a href="https://www.munzee.com/map/dp5u4pntu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleOhioSpiritTrophy.json" target="_blank">json</a><br />
+USA_GreenvilleEvolutionSquareFull, <b>updated</b>, 60, <a href="https://www.munzee.com/map/dp5u1zzky/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleEvolutionSquareFull.json" target="_blank">json</a> <b>100%</b><br />
