--- a/feladat.html
+++ b/feladat.html
@@ -811,3 +811,4 @@ USA_GreenvilleOhioLightbulb, <b>updated</b>, 548, <a href="https://www.munzee.co
 USA_GreenvilleSouthCarolina, <b>updated</b>, 214, <a href="https://www.munzee.com/map/dp5u60nmr/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleSouthCarolina.json" target="_blank">json</a><br />
 USA_JaysvilleFlatCircles, <b>updated</b>, 284, <a href="https://www.munzee.com/map/dp5u6betv/14.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JaysvilleFlatCircles.json" target="_blank">json</a><br />
 USA_CCTXZeeCret, <b>updated</b>, 130, <a href="https://www.munzee.com/map/9ufv85zsj/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CCTXZeeCret.json" target="_blank">json</a><br />
+USA_DecaturHearts, <b>updated</b>, 72, <a href="https://www.munzee.com/map/dp0dxenc6/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DecaturHearts.json" target="_blank">json</a> <b>100%</b><br />
