--- a/feladat.html
+++ b/feladat.html
@@ -818,3 +818,4 @@ UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, <b>updated</b>, 129, <a href="htt
 USA_ScoobyDooCrossbow, <b>updated</b>, 1437, <a href="https://www.munzee.com/map/9vff0pt4u/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ScoobyDooCrossbow.json" target="_blank">json</a><br />
 USA_TexasStateFlag, <b>updated</b>, 1908, <a href="https://www.munzee.com/map/9vfdq1jxx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TexasStateFlag.json" target="_blank">json</a> <b>100%</b><br />
 USA_Geowoodstock2019, <b>updated</b>, 443, <a href="https://www.munzee.com/map/9vff24s1z/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Geowoodstock2019.json" target="_blank">json</a> <b>100%</b><br />
+USA_MansfieldMuru, <b>updated</b>, 135, <a href="https://www.munzee.com/map/9vfcmc50m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MansfieldMuru.json" target="_blank">json</a><br />
