--- a/feladat.html
+++ b/feladat.html
@@ -819,3 +819,4 @@ USA_ScoobyDooCrossbow, <b>updated</b>, 1437, <a href="https://www.munzee.com/map
 USA_TexasStateFlag, <b>updated</b>, 1908, <a href="https://www.munzee.com/map/9vfdq1jxx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TexasStateFlag.json" target="_blank">json</a> <b>100%</b><br />
 USA_Geowoodstock2019, <b>updated</b>, 443, <a href="https://www.munzee.com/map/9vff24s1z/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Geowoodstock2019.json" target="_blank">json</a> <b>100%</b><br />
 USA_MansfieldMuru, <b>updated</b>, 135, <a href="https://www.munzee.com/map/9vfcmc50m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MansfieldMuru.json" target="_blank">json</a><br />
+USA_CedarRapidsIAFlag, <b>updated</b>, 326, <a href="https://www.munzee.com/map/9zqy9ykqt/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CedarRapidsIAFlag.json" target="_blank">json</a><br />
