--- a/feladat.html
+++ b/feladat.html
@@ -832,3 +832,4 @@ USA_CRJonesParkBirthday7FlatsMatt, <b>updated</b>, 204, <a href="https://www.mun
 USA_GCandyCane, <b>updated</b>, 139, <a href="https://www.munzee.com/map/dngch37ny/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GCandyCane.json" target="_blank">json</a> <b>100%</b><br />
 USA_GCandyCaneFlats, <b>updated</b>, 103, <a href="https://www.munzee.com/map/dngch37ny/16.1009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GCandyCaneFlats.json" target="_blank">json</a><br />
 USA_GShamrock, <b>updated</b>, 325, <a href="https://www.munzee.com/map/dngckpu1t/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GShamrock.json" target="_blank">json</a> <b>100%</b><br />
+USA_GShamrockFlats, <b>updated</b>, 160, <a href="https://www.munzee.com/map/dngckpu1t/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GShamrockFlats.json" target="_blank">json</a><br />
